--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@
 faster-whisper==1.0.3
 pyaudio==0.2.14
 pyttsx3==2.90
+speechrecognition==3.10.1
+pvporcupine==1.9.5
+
 
 
 
@@ -29,7 +32,7 @@ wmi==1.5.1
 comtypes==1.4.1
 
 # Utilities
-python-dotenv==1.0.0
+
 colorama==0.4.6
 pygetwindow==0.0.9
 pywin32==306
